Minimal Changes for Working Updates on Realme Device Tested on RMX3085

--- a/sdk/appcenter-distribute/build.gradle
+++ b/sdk/appcenter-distribute/build.gradle
@@ -8,6 +8,7 @@ evaluationDependsOn(':sdk')
 
 dependencies {
     api project(':sdk:appcenter')
+    implementation "androidx.core:core:1.6.0"
 }
 def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("local.properties"))) //Set env variable GPR_USER & GPR_API_KEY if not adding a properties file
