--- a/apps/sasquatch/src/main/AndroidManifest.xml
+++ b/apps/sasquatch/src/main/AndroidManifest.xml
@@ -19,14 +19,23 @@
         tools:targetApi="n">
         <activity
             android:name=".activities.MainActivity"
-            android:launchMode="singleTop"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
         <activity
             android:name=".activities.CrashActivity"
             android:label="@string/title_crashes" />
